// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/AdaptiveCard/Inputs Input Choice Set 1`] = `
Array [
  <div
    className="wxc wxc-adaptive-card wxc wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Default Input.ChoiceSet label (compact)
      </div>
      <div
        className="wxc-label__control"
      >
        <label
          className="wxc wxc-label wxc wxc-dropdown"
        >
          <div
            className="wxc-label__control"
          >
            <div
              className="wxc-dropdown__control"
              disabled={false}
            >
              <div
                aria-label="undefined"
                className="wxc-dropdown__selected-option "
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="wxc-dropdown__label"
                >
                  Please make a selection
                </span>
                <svg
                  className="wxc-icon "
                  height={13}
                  style={Object {}}
                  viewBox="0 0 26 14"
                  width={13}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25.7075 0.293202C25.52 0.105701 25.2656 0.000366211 25.0004 0.000366211C24.7353 0.000366211 24.4809 0.105701 24.2934 0.293202L13 11.5862L1.70699 0.293202C1.51851 0.110381 1.26568 0.00902984 1.0031 0.0110359C0.740528 0.013042 0.489278 0.118244 0.303611 0.303925C0.117943 0.489605 0.0127584 0.740862 0.0107709 1.00344C0.00878336 1.26601 0.110153 1.51883 0.292988 1.7073L12.293 13.7073C12.4805 13.8948 12.7348 14.0001 13 14.0001C13.2652 14.0001 13.5195 13.8948 13.707 13.7073L25.707 1.7073C25.8946 1.51984 26 1.26555 26.0001 1.00036C26.0002 0.735168 25.8949 0.4808 25.7075 0.293202Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Required Input.ChoiceSet label (compact)
        <span
          className="wxc-label__required"
        >
           *
        </span>
      </div>
      <div
        className="wxc-label__control"
      >
        <label
          className="wxc wxc-label wxc wxc-dropdown"
        >
          <div
            className="wxc-label__control"
          >
            <div
              className="wxc-dropdown__control"
              disabled={false}
            >
              <div
                aria-label="Option 1. undefined"
                className="wxc-dropdown__selected-option "
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="wxc-dropdown__label"
                >
                  Option 1
                </span>
                <svg
                  className="wxc-icon "
                  height={13}
                  style={Object {}}
                  viewBox="0 0 26 14"
                  width={13}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25.7075 0.293202C25.52 0.105701 25.2656 0.000366211 25.0004 0.000366211C24.7353 0.000366211 24.4809 0.105701 24.2934 0.293202L13 11.5862L1.70699 0.293202C1.51851 0.110381 1.26568 0.00902984 1.0031 0.0110359C0.740528 0.013042 0.489278 0.118244 0.303611 0.303925C0.117943 0.489605 0.0127584 0.740862 0.0107709 1.00344C0.00878336 1.26601 0.110153 1.51883 0.292988 1.7073L12.293 13.7073C12.4805 13.8948 12.7348 14.0001 13 14.0001C13.2652 14.0001 13.5195 13.8948 13.707 13.7073L25.707 1.7073C25.8946 1.51984 26 1.26555 26.0001 1.00036C26.0002 0.735168 25.8949 0.4808 25.7075 0.293202Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Default Input.ChoiceSet label (expanded)
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          aria-checked={false}
          aria-disabled={false}
          className="wxc wxc-radio-button wxc-radio-button--enabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          required={false}
          role="radio"
          tabIndex={0}
        >
          <div
            className="wxc-radio-button__background"
          />
          <span
            className="wxc-radio-button__title"
          >
            Option 1
          </span>
        </div>
        <div
          aria-checked={true}
          aria-disabled={false}
          className="wxc wxc-radio-button wxc-radio-button--enabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          required={false}
          role="radio"
          tabIndex={0}
        >
          <div
            className="wxc-radio-button__background"
          >
            <div
              className="wxc-radio-button__foreground"
            />
          </div>
          <span
            className="wxc-radio-button__title"
          >
            Option 2
          </span>
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Required Input.ChoiceSet label (expanded)
        <span
          className="wxc-label__required"
        >
           *
        </span>
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          aria-checked={false}
          aria-disabled={false}
          className="wxc wxc-radio-button wxc-radio-button--enabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          required={false}
          role="radio"
          tabIndex={0}
        >
          <div
            className="wxc-radio-button__background"
          />
          <span
            className="wxc-radio-button__title"
          >
            Option 1
          </span>
        </div>
        <div
          aria-checked={false}
          aria-disabled={false}
          className="wxc wxc-radio-button wxc-radio-button--enabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          required={false}
          role="radio"
          tabIndex={0}
        >
          <div
            className="wxc-radio-button__background"
          />
          <span
            className="wxc-radio-button__title"
          >
            Option 2
          </span>
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Default Input.ChoiceSet label (expanded, multiselect)
      </div>
      <div
        className="wxc-label__control"
      >
        <label
          className="wxc wxc-checkbox"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            aria-checked={false}
            aria-disabled={false}
            className="wxc-checkbox__box wxc-checkbox__box--enabled wxc-checkbox__box--unchecked"
            role="checkbox"
            tabIndex={0}
          />
          <span
            className="wxc-checkbox__title"
          >
            Option 1
          </span>
        </label>
        <label
          className="wxc wxc-checkbox"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            aria-checked={false}
            aria-disabled={false}
            className="wxc-checkbox__box wxc-checkbox__box--enabled wxc-checkbox__box--unchecked"
            role="checkbox"
            tabIndex={0}
          />
          <span
            className="wxc-checkbox__title"
          >
            Option 2
          </span>
        </label>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-adaptive-cards-input-choice-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--vertical"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Required Input.ChoiceSet label (compact, multiselect)
        <span
          className="wxc-label__required"
        >
           *
        </span>
      </div>
      <div
        className="wxc-label__control"
      >
        <label
          className="wxc wxc-checkbox"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            aria-checked={true}
            aria-disabled={false}
            className="wxc-checkbox__box wxc-checkbox__box--enabled wxc-checkbox__box--checked"
            role="checkbox"
            tabIndex={0}
          >
            <svg
              className="wxc-icon wxc-checkbox__checkmark"
              height={26}
              style={Object {}}
              viewBox="0 0 26 18"
              width={26}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.20046 17.1999C8.06863 17.2002 7.93805 17.1743 7.81633 17.1236C7.69461 17.073 7.58418 16.9987 7.49146 16.905L0.291276 9.66962C0.198683 9.57651 0.125336 9.46608 0.0754228 9.34463C0.0255091 9.22317 6.0504e-06 9.09308 0.000370053 8.96177C0.000734056 8.83046 0.026958 8.70051 0.0775442 8.57933C0.12813 8.45816 0.202088 8.34813 0.295196 8.25554C0.388303 8.16295 0.498736 8.0896 0.620189 8.03969C0.741643 7.98977 0.871738 7.96427 1.00305 7.96463C1.13436 7.965 1.26431 7.99122 1.38548 8.04181C1.50666 8.09239 1.61668 8.16635 1.70928 8.25946L8.2542 14.8366L24.3499 1.04169C24.5511 0.869196 24.8126 0.783711 25.0769 0.80404C25.3412 0.824369 25.5866 0.948847 25.759 1.15009C25.9315 1.35133 26.017 1.61286 25.9967 1.87713C25.9764 2.1414 25.8519 2.38678 25.6506 2.55927L8.85085 16.9587C8.67 17.1145 8.43917 17.2001 8.20046 17.1999Z"
              />
            </svg>
          </div>
          <span
            className="wxc-checkbox__title"
          >
            Option 1
          </span>
        </label>
        <label
          className="wxc wxc-checkbox"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            aria-checked={false}
            aria-disabled={false}
            className="wxc-checkbox__box wxc-checkbox__box--enabled wxc-checkbox__box--unchecked"
            role="checkbox"
            tabIndex={0}
          />
          <span
            className="wxc-checkbox__title"
          >
            Option 2
          </span>
        </label>
        <label
          className="wxc wxc-checkbox"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            aria-checked={true}
            aria-disabled={false}
            className="wxc-checkbox__box wxc-checkbox__box--enabled wxc-checkbox__box--checked"
            role="checkbox"
            tabIndex={0}
          >
            <svg
              className="wxc-icon wxc-checkbox__checkmark"
              height={26}
              style={Object {}}
              viewBox="0 0 26 18"
              width={26}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.20046 17.1999C8.06863 17.2002 7.93805 17.1743 7.81633 17.1236C7.69461 17.073 7.58418 16.9987 7.49146 16.905L0.291276 9.66962C0.198683 9.57651 0.125336 9.46608 0.0754228 9.34463C0.0255091 9.22317 6.0504e-06 9.09308 0.000370053 8.96177C0.000734056 8.83046 0.026958 8.70051 0.0775442 8.57933C0.12813 8.45816 0.202088 8.34813 0.295196 8.25554C0.388303 8.16295 0.498736 8.0896 0.620189 8.03969C0.741643 7.98977 0.871738 7.96427 1.00305 7.96463C1.13436 7.965 1.26431 7.99122 1.38548 8.04181C1.50666 8.09239 1.61668 8.16635 1.70928 8.25946L8.2542 14.8366L24.3499 1.04169C24.5511 0.869196 24.8126 0.783711 25.0769 0.80404C25.3412 0.824369 25.5866 0.948847 25.759 1.15009C25.9315 1.35133 26.017 1.61286 25.9967 1.87713C25.9764 2.1414 25.8519 2.38678 25.6506 2.55927L8.85085 16.9587C8.67 17.1145 8.43917 17.2001 8.20046 17.1999Z"
              />
            </svg>
          </div>
          <span
            className="wxc-checkbox__title"
          >
            Option 3
          </span>
        </label>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-action-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--horizontal"
      style={Object {}}
    >
      <button
        autoFocus={false}
        className="wxc wxc-button wxc wxc-ac-action wxc wxc-ac-action-submit wxc wxc-ac wxc-ac-action-style--default wxc-button--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "height": 32,
          }
        }
        tabIndex={0}
        type="button"
      >
        <span>
          OK
        </span>
      </button>
      
    </div>
    <div />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard/Inputs Input Date 1`] = `
Array [
  <div
    className="wxc wxc-adaptive-card wxc wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-text-block wxc wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-visible--true"
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      <div
        className="wxc wxc-markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Date Input",
          }
        }
      />
    </div>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-date-input wxc wxc-adaptive-cards-input-date wxc wxc-ac wxc-ac-is-visible--true"
      style={Object {}}
    >
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={0}
            type="date"
            value="2017-10-12"
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-action-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--horizontal"
      style={Object {}}
    >
      <button
        autoFocus={false}
        className="wxc wxc-button wxc wxc-ac-action wxc wxc-ac-action-submit wxc wxc-ac wxc-ac-action-style--default wxc-button--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "height": 32,
          }
        }
        tabIndex={0}
        type="button"
      >
        <span>
          OK
        </span>
      </button>
      
    </div>
    <div />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard/Inputs Input Number 1`] = `
Array [
  <div
    className="wxc wxc-adaptive-card wxc wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-adaptive-cards-input-number wxc wxc-ac wxc-ac-is-visible--true"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Test
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            max={10}
            min={1}
            onChange={[Function]}
            placeholder="Enter a number"
            required={false}
            tabIndex={0}
            type="number"
            value={3}
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
          <div
            className="wxc-input-field__input-controls"
          >
            <button
              autoFocus={false}
              className="wxc wxc-button wxc-input-field__input-increment-button wxc-button--ghost"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "height": 32,
                }
              }
              tabIndex={0}
              type="button"
            >
              <svg
                className="wxc-icon "
                height={13}
                style={Object {}}
                viewBox="0 0 14 7"
                width={13}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0.552614 4.2235C0.581975 4.28225 0.62262 4.33463 0.672228 4.37766C0.721836 4.42069 0.779435 4.45353 0.841736 4.4743C0.904037 4.49507 0.969819 4.50336 1.03533 4.4987C1.10083 4.49405 1.16478 4.47653 1.22351 4.44715L6.99996 1.55895L12.7762 4.44715C12.8948 4.50647 13.0322 4.51623 13.158 4.47429C13.2838 4.43235 13.3878 4.34215 13.4471 4.22353C13.5065 4.1049 13.5162 3.96757 13.4743 3.84175C13.4323 3.71593 13.3421 3.61192 13.2235 3.5526L7.22351 0.552603C7.15406 0.517913 7.07749 0.499854 6.99986 0.499854C6.92223 0.499854 6.84566 0.517913 6.77621 0.552603L0.776214 3.5526C0.717475 3.58197 0.665097 3.62262 0.622069 3.67223C0.579042 3.72184 0.546209 3.77944 0.525445 3.84174C0.504681 3.90404 0.496394 3.96982 0.501056 4.03532C0.505717 4.10083 0.523237 4.16477 0.552614 4.2235Z"
                />
              </svg>
            </button>
            
            <button
              autoFocus={false}
              className="wxc wxc-button wxc-input-field__input-decrement-button wxc-button--ghost"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "height": 32,
                }
              }
              tabIndex={0}
              type="button"
            >
              <svg
                className="wxc-icon "
                height={13}
                style={Object {}}
                viewBox="0 0 14 7"
                width={13}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0.776062 3.44715L6.77631 6.44715C6.84576 6.48183 6.92232 6.49988 6.99994 6.49988C7.07756 6.49988 7.15412 6.48183 7.22356 6.44715L13.2236 3.44715C13.3422 3.38784 13.4324 3.28384 13.4743 3.15802C13.4951 3.09572 13.5034 3.02994 13.4987 2.96444C13.4941 2.89894 13.4766 2.83499 13.4472 2.77625C13.4178 2.71752 13.3772 2.66514 13.3276 2.62211C13.278 2.57908 13.2204 2.54625 13.1581 2.52548C13.0323 2.48354 12.8949 2.49329 12.7763 2.5526L6.99991 5.4408L1.22331 2.5526C1.10469 2.4933 0.967361 2.48354 0.841543 2.52548C0.779244 2.54625 0.721645 2.57908 0.672036 2.62211C0.622427 2.66514 0.581778 2.71752 0.552412 2.77625C0.523045 2.83499 0.505535 2.89894 0.500881 2.96444C0.496227 3.02995 0.504521 3.09572 0.525289 3.15802C0.546057 3.22032 0.578891 3.27792 0.621919 3.32753C0.664947 3.37714 0.717325 3.41779 0.776062 3.44715Z"
                />
              </svg>
            </button>
            
          </div>
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-action-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--horizontal"
      style={Object {}}
    >
      <button
        autoFocus={false}
        className="wxc wxc-button wxc wxc-ac-action wxc wxc-ac-action-submit wxc wxc-ac wxc-ac-action-style--default wxc-button--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "height": 32,
          }
        }
        tabIndex={0}
        type="button"
      >
        <span>
          OK
        </span>
      </button>
      
    </div>
    <div />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard/Inputs Input Text 1`] = `
Array [
  <div
    className="wxc wxc-adaptive-card wxc wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-text-block wxc wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-visible--true wxc-ac-container-style--heading wxc-ac-container--has-padding"
      role="heading"
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      <div
        className="wxc wxc-markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Specify the type of text being requested:",
          }
        }
      />
    </div>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--text wxc-ac-height--auto"
      style={Object {}}
    >
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={true}
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--email"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        style: email
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={0}
            type="email"
            value=""
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--tel wxc-ac-height--stretch"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        style: tel
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={0}
            type="tel"
            value=""
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--url"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        style: url
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={0}
            type="url"
            value=""
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true wxc-ac-input-style--password"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        style: password
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={0}
            type="password"
            value=""
          />
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-text-block wxc wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-visible--true"
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      <div
        className="wxc wxc-markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Multiline text input:",
          }
        }
      />
    </div>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-textbox wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true"
      style={Object {}}
    >
      <div
        className="wxc-label__control"
      >
        <textarea
          aria-label=""
          className="wxc-textbox__control"
          disabled={false}
          maxLength={500}
          onChange={[Function]}
          placeholder="enter comment"
          rows={5}
          value=""
        />
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-text-block wxc wxc-ac wxc-ac-horizontal-alignment--left wxc-ac-is-visible--true"
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      <div
        className="wxc wxc-markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Pre-filled value:",
          }
        }
      />
    </div>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-textbox wxc wxc-adaptive-cards-input-text wxc wxc-ac wxc-ac-is-visible--true"
      style={Object {}}
    >
      <div
        className="wxc-label__control"
      >
        <textarea
          aria-label=""
          className="wxc-textbox__control"
          disabled={false}
          maxLength={500}
          onChange={[Function]}
          placeholder="enter comment"
          rows={5}
          value="This value was pre-filled"
        />
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-action-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--horizontal"
      style={Object {}}
    >
      <button
        autoFocus={false}
        className="wxc wxc-button wxc wxc-ac-action wxc wxc-ac-action-submit wxc wxc-ac wxc-ac-action-style--default wxc-button--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "height": 32,
          }
        }
        tabIndex={0}
        type="button"
      >
        <span>
          OK
        </span>
      </button>
      
    </div>
    <div />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard/Inputs Input Time 1`] = `
Array [
  <div
    className="wxc wxc-adaptive-card wxc wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-time-input wxc wxc-adaptive-cards-input-time wxc wxc-ac wxc-ac-is-visible--true"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        Start time
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={false}
            tabIndex={0}
            type="time"
            value="12:43"
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-label wxc wxc-input-field wxc wxc-time-input wxc wxc-adaptive-cards-input-time wxc wxc-ac wxc-ac-is-visible--true"
      style={Object {}}
    >
      <div
        className="wxc-label__label-text"
      >
        End time
        <span
          className="wxc-label__required"
        >
           *
        </span>
      </div>
      <div
        className="wxc-label__control"
      >
        <div
          className="wxc-input-field__form-control"
        >
          <input
            autoFocus={false}
            className="wxc-input-field__input"
            disabled={false}
            onChange={[Function]}
            required={true}
            tabIndex={0}
            type="time"
            value=""
          />
          <button
            autoFocus={false}
            className="wxc wxc-button wxc-input-field__input-field-right-icon wxc-button--ghost"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "height": 28,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className="wxc-icon "
              height={16}
              style={Object {}}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.0596 11.9998L19.2794 5.78001C19.349 5.71038 19.4042 5.6277 19.4419 5.53672C19.4796 5.44573 19.499 5.34822 19.499 5.24974C19.499 5.15126 19.4796 5.05374 19.4419 4.96276C19.4042 4.87177 19.349 4.7891 19.2793 4.71947C19.2097 4.64983 19.127 4.5946 19.036 4.55691C18.945 4.51923 18.8475 4.49983 18.7491 4.49983C18.6506 4.49984 18.5531 4.51924 18.4621 4.55692C18.3711 4.59461 18.2884 4.64985 18.2188 4.71949L11.999 10.9392L5.77929 4.71949C5.70979 4.64921 5.62709 4.59335 5.53594 4.55514C5.44478 4.51692 5.34697 4.49711 5.24813 4.49683C5.14929 4.49655 5.05137 4.51581 4.96 4.55351C4.86863 4.59121 4.78562 4.64659 4.71573 4.71648C4.64584 4.78638 4.59045 4.8694 4.55276 4.96077C4.51507 5.05214 4.49581 5.15006 4.4961 5.2489C4.49638 5.34774 4.5162 5.44555 4.55442 5.5367C4.59264 5.62786 4.6485 5.71055 4.71879 5.78004L10.9385 11.9998L4.71879 18.2195C4.64915 18.2892 4.59391 18.3718 4.55622 18.4628C4.51853 18.5538 4.49914 18.6513 4.49914 18.7498C4.49914 18.8483 4.51853 18.9458 4.55622 19.0368C4.59391 19.1278 4.64915 19.2105 4.71878 19.2801C4.78842 19.3497 4.87109 19.405 4.96207 19.4427C5.05306 19.4803 5.15057 19.4997 5.24906 19.4997C5.34754 19.4997 5.44505 19.4803 5.53604 19.4427C5.62702 19.405 5.70969 19.3497 5.77933 19.2801L11.9991 13.0603L18.2188 19.2801C18.3595 19.4207 18.5502 19.4997 18.7491 19.4997C18.948 19.4997 19.1387 19.4207 19.2794 19.2801C19.42 19.1395 19.499 18.9487 19.499 18.7498C19.499 18.5509 19.42 18.3602 19.2794 18.2195L13.0596 11.9998Z"
                fillOpacity="0.95"
              />
            </svg>
          </button>
          
        </div>
      </div>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-action-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--horizontal"
      style={Object {}}
    >
      <button
        autoFocus={false}
        className="wxc wxc-button wxc wxc-ac-action wxc wxc-ac-action-submit wxc wxc-ac wxc-ac-action-style--default wxc-button--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "height": 32,
          }
        }
        tabIndex={0}
        type="button"
      >
        <span>
          OK
        </span>
      </button>
      
    </div>
    <div />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard/Inputs Input Toggle 1`] = `
Array [
  <div
    className="wxc wxc-adaptive-card wxc wxc-ac wxc-ac-container--vertical wxc-ac-container--has-padding"
    style={Object {}}
  >
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <label
      className="wxc wxc-toggle wxc wxc-adaptive-cards-input-toggle wxc wxc-ac wxc-ac-is-visible--true"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={Object {}}
    >
      <div
        aria-checked="false"
        aria-disabled="false"
        className="wxc-toggle__switch wxc-toggle__switch--enabled wxc-toggle__switch--off"
        role="switch"
        tabIndex={0}
      >
        <span
          className="wxc-toggle__slider"
        />
      </div>
      <span
        className="wxc-toggle__title"
      >
        I accept the terms and agreements
      </span>
    </label>
    <div
      className="wxc wxc-ac-spacer wxc-ac-spacer--spacing--default"
      style={
        Object {
          "style": undefined,
        }
      }
    />
    <div
      className="wxc wxc-adaptive-cards-action-set wxc wxc-ac wxc-ac-is-visible--true wxc-ac-container--horizontal"
      style={Object {}}
    >
      <button
        autoFocus={false}
        className="wxc wxc-button wxc wxc-ac-action wxc wxc-ac-action-submit wxc wxc-ac wxc-ac-action-style--default wxc-button--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "height": 32,
          }
        }
        tabIndex={0}
        type="button"
      >
        <span>
          OK
        </span>
      </button>
      
    </div>
    <div />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
